# chestnut-chase

./: ARTWORK.md  ARTWORK.txt  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
assets/: CMakeLists.txt  assets.h.in  background.xcf  box.frag  box.vert  chestnut.xcf  destination.frag  destination.vert  dust.xcf  font.xcf  glow.xcf  hex_converter.py  logo.xcf  player.xcf  player2.xcf  sprite.frag  sprite.vert  test_gradient.xcf  test_music.sunvox  test_particle.xcf  test_sprite.xcf  test_spritemap.xcf
engine/: CMakeLists.txt  audio.cpp  audio.h  box.cpp  box.h  buffer.cpp  buffer.h  chunk.cpp  chunk.h  controller.cpp  controller.h  destination.cpp  destination.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  keyboard.cpp  keyboard.h  music.cpp  music.h  particles.cpp  particles.h  program.cpp  program.h  quad.cpp  quad.h  renderbuffer.cpp  renderbuffer.h  shader.cpp  shader.h  spritemap.cpp  spritemap.h  spriterenderer.cpp  spriterenderer.h  texture.cpp  texture.h  vertexarray.cpp  (+3 more)
src/: CMakeLists.txt  background.cpp  background.h  chestnut.cpp  chestnut.h  chestnuts.cpp  chestnuts.h  game.cpp  health.cpp  health.h  leaves.cpp  leaves.h  player.cpp  player.h  score.cpp  score.h  screen.cpp  screen.h
tests/: CMakeLists.txt  assets_test.cpp  destination_test.cpp  font_test.cpp  music_test.cpp  particle_test.cpp  sprite_test.cpp  spritemap_test.cpp  transparency_test.cpp  wave_test.cpp
